@@ -406,4 +406,9 @@ run dyngamma
 run survival
 run tutorial
 
+
+persistidents 1
+
 execdir scripts
+
+persistidents 0
